Create a very basic content website

--- a/index.html
+++ b/index.html
@@ -1,6 +1,38 @@
-<html>
-<body>
-  <h1>Hey!</h1>
-  <h2>Listen</h2>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="/static/styles.css" />
+    <title>Medical Mechanico</title>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
+    <script type="text/javascript" src="/static/main.js"></script>
+  </head>
+  <body>
+    <div class="container">
+      <h1>This a header that describes a section.</h1>
+      <h2>Here is a subheading for this section.</h2>
+      <p>
+        This bronze. Yes, now's the moment; I'm looking at this thing
+        on the mantelpiece, and I understand that I'm in hell. I tell
+        you, everything's been thought out beforehand. They knew I'd
+        stand at the fireplace stroking this thing of bronze, with all
+        those eyes intent on me. Devouring me. What? Only two of you?
+        I thought there were more; many more. So this is hell. I'd
+        never have believed it. You remember all we were told about
+        the torture-chambers, the fire and brimstone, the "burning
+        marl." Old wives' tales! There's no need for red-hot pokers.
+        Hell is -- other people!
+      </p>
+      <img src="/static/an_image.jpg" />
+      <h2>Here's some more text.</h2>
+      <img src="/static/another_image.jpg" />
+      <p><strong>Other things that might be helpful:</strong></p>
+      <ul>
+        <li>Using li components you can make lists</li>
+        <li>They show up pretty much the same as anything else</li>
+      </ul>
+    </div>
+    <div id="image-overlay"></div>
+  </body>
 </html>
