--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p>
         Test test
       </p>
-      <img src="/static/an_image.jpg" />
+      <img src="/static/ACR T-rads.jpg" />
       <h2>Here's some more text.</h2>
       <img src="/static/another_image.jpg" />
       <p><strong>Other things that might be helpful:</strong></p>
