--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </p>
       <img src="/static/ACR T-rads.jpg" />
       <h2>Here's some more text.</h2>
-      <img src="/static/2017 Fleishner Guidelines.jpg" />
+      <img src="/static/2017 Fleishner guidelines.jpg" />
       <p><strong>Other things that might be helpful:</strong></p>
       <ul>
         <li>Using li components you can make lists</li>
