--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
   </head>
   <body>
     <div class="container">
-      <h1>This a header that describes a section.</h1>
-      <h2>Here is a subheading for this section.</h2>
-      <p>
-        Test test
-      </p>
+      <h1>Radiology imaging guidelines</h1>
+      <h2>TI-RADS Thyroid nodule classification and recommendations</h>
       <img src="/static/ACR T-rads.jpg" />
-      <h2>Here's some more text.</h2>
+      <h2>New 2017 Fleishner guidelines for incidentally discovered pulmonary nodules</h2>
       <img src="/static/2017 Fleishner guidelines.jpg" />
+      <h2>SIR anticoagulation guidelines for interventional procedures
+      <img src="/static/SIR anticoagulation guidelines.jpg" />
       <p><strong>Other things that might be helpful:</strong></p>
       <ul>
         <li>Using li components you can make lists</li>
