--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h2>SIR anticoagulation guidelines for interventional procedures
       <img src="/static/SIR anticoagulation guidelines.jpg" />
       <h2>LUNG-RADS screening guidelines
-      <img src="Lung-RADS.jpg" />
+      <img src="/static/Lung-RADS.jpg" />
       <p><strong>Other things that might be helpful:</strong></p>
       <ul>
         <li>Using li components you can make lists</li>
