Fix some of the styling issues

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <body>
     <div class="container">
       <h1>Radiology imaging guidelines</h1>
-      <h2>TI-RADS Thyroid nodule classification and recommendations</h>
+      <h2>TI-RADS Thyroid nodule classification and recommendations</h2>
       <img src="/static/ACR T-rads.jpg" />
       <h2>New 2017 Fleishner guidelines for incidentally discovered pulmonary nodules</h2>
       <img src="/static/2017 Fleishner guidelines.jpg" />
-      <h2>SIR anticoagulation guidelines for interventional procedures
+      <h2>SIR anticoagulation guidelines for interventional procedures</h2>
       <img src="/static/SIR anticoagulation guidelines.jpg" />
-      <h2>LUNG-RADS screening guidelines
+      <h2>LUNG-RADS screening guidelines</h2>
       <img src="/static/Lung-RADS.jpg" />
       <p><strong>Other things that might be helpful:</strong></p>
       <ul>
