Some style changes for mouse cursor

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="/static/main.js"></script>
   </head>
   <body>
-    <div class="container">
+    <div id="container">
       <h1>Radiology imaging guidelines</h1>
       <h2>TI-RADS Thyroid nodule classification and recommendations</h2>
       <img src="/static/ACR T-rads.jpg" />
@@ -19,11 +19,6 @@
       <img src="/static/SIR anticoagulation guidelines.jpg" />
       <h2>LUNG-RADS screening guidelines</h2>
       <img src="/static/Lung-RADS.jpg" />
-      <p><strong>Other things that might be helpful:</strong></p>
-      <ul>
-        <li>Using li components you can make lists</li>
-        <li>They show up pretty much the same as anything else</li>
-      </ul>
     </div>
     <div id="image-overlay"></div>
   </body>
