Make images just link to the image

--- a/index.html
+++ b/index.html
@@ -12,13 +12,21 @@
     <div id="container">
       <h1>Radiology imaging guidelines</h1>
       <h2>TI-RADS Thyroid nodule classification and recommendations</h2>
-      <img src="/static/ACR T-rads.jpg" />
+      <a href="/static/ACR T-rads.jpg">
+        <img src="/static/ACR T-rads.jpg" />
+      </a>
       <h2>New 2017 Fleishner guidelines for incidentally discovered pulmonary nodules</h2>
-      <img src="/static/2017 Fleishner guidelines.jpg" />
+      <a href="/static/2017 Fleishner guidelines.jpg">
+        <img src="/static/2017 Fleishner guidelines.jpg" />
+      </a>a>
       <h2>SIR anticoagulation guidelines for interventional procedures</h2>
-      <img src="/static/SIR anticoagulation guidelines.jpg" />
+      <a href="/static/SIR anticoagulation guidelines.jpg">
+        <img src="/static/SIR anticoagulation guidelines.jpg" />
+      </a>
       <h2>LUNG-RADS screening guidelines</h2>
-      <img src="/static/Lung-RADS.jpg" />
+      <a href="/static/Lung-RADS.jpg">
+        <img src="/static/Lung-RADS.jpg" />
+      </a>
     </div>
     <div id="image-overlay"></div>
   </body>
