Disable JS for zoom

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/static/styles.css" />
     <title>Medical Mechanico</title>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
-    <script type="text/javascript" src="/static/main.js"></script>
+    <script type="text/javascript" src="/static/main.js?1"></script>
   </head>
   <body>
     <div id="container">
@@ -18,7 +18,7 @@
       <h2>New 2017 Fleishner guidelines for incidentally discovered pulmonary nodules</h2>
       <a href="/static/2017 Fleishner guidelines.jpg">
         <img src="/static/2017 Fleishner guidelines.jpg" />
-      </a>a>
+      </a>
       <h2>SIR anticoagulation guidelines for interventional procedures</h2>
       <a href="/static/SIR anticoagulation guidelines.jpg">
         <img src="/static/SIR anticoagulation guidelines.jpg" />
