--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
       <a href="/static/Lung-RADS.jpg">
         <img src="/static/Lung-RADS.jpg" />
       </a>
+      <h2>SIR Antibiotic guidelines for Interventional Radiology procedures</h2>
+        <a href="static/SIR Antibiotic guidelines.jpg">
+          <img src="/static/SIR Antibiotic guidelines.jpg" />
+        </a>
     </div>
     <div id="image-overlay"></div>
   </body>
