--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <img src="/static/Lung-RADS.jpg" />
       </a>
       <h2>SIR Antibiotic guidelines for Interventional Radiology procedures</h2>
-        <a href="static/SIR Antibiotic guidelines.jpg">
-          <img src="/static/SIR Antibiotic guidelines.jpg" />
+        <a href="static/SIR antibiotic guidelines.jpg">
+          <img src="/static/SIR antibiotic guidelines.jpg" />
         </a>
     </div>
     <div id="image-overlay"></div>
