--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <a href="static/SIR antibiotic guidelines.jpg">
           <img src="/static/SIR antibiotic guidelines.jpg" />
         </a>
+      <h2>Directory</h2>
+      <a href="static/ARI Phone Directory.jpg">
+        <img src="static/ARI Phone Directory.jpg">
+      </a>
     </div>
     <div id="image-overlay"></div>
   </body>
