--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
           <img src="/static/SIR antibiotic guidelines.jpg" />
         </a>
       <h2>Directory</h2>
-      <a href="static/ARI Phone Directory.jpg">
-        <img src="static/ARI Phone Directory.jpg">
+      <a href="static/ARI phone directory.jpg">
+        <img src="static/ARI phone directory.jpg" />
       </a>
     </div>
     <div id="image-overlay"></div>
