--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
       <a href="static/ARI phone directory.jpg">
         <img src="static/ARI phone directory.jpg" />
       </a>
+      <h2>Critical Test Results</h2>
+        <a href="static/CTR.jpg">
+            <img src="/static/CTR.jpg" />
+        </a>
     </div>
     <div id="image-overlay"></div>
   </body>
