--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </a>
       <h2>Critical Test Results</h2>
         <a href="static/CTR.jpg">
-            <img src="/static/CTR.jpg" />
+         <img src="static/CTR.jpg" />
         </a>
     </div>
     <div id="image-overlay"></div>
