--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       <a href="/static/SIR anticoagulation guidelines.jpg">
         <img src="/static/SIR anticoagulation guidelines.jpg" />
       </a>
+      <h2>AJR Guidelines Anticoagulation drugs for IR procedures</h2>
+      <a href="/static/AJR guidelines for anticoagulation drugs.jpg">
+        <img src="/static/AJR guidelines for anticoagulation drugs.jpg" />
+      </a>
       <h2>LUNG-RADS screening guidelines</h2>
       <a href="/static/Lung-RADS.jpg">
         <img src="/static/Lung-RADS.jpg" />
