--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       <a href="/static/AJR guidelines for anticoagulation drugs.jpg">
         <img src="/static/AJR guidelines for anticoagulation drugs.jpg" />
       </a>
+      <h2>SIR anticoagulation guidelines for interventional procedures 2
+      <a href="/static/AJR anticoagulation recommendations 2.jpg">
+        <img src="/static/AJR anticoagulation recommendations 2.jpg" />
+        </a>
       <h2>SIR Antibiotic guidelines for Interventional Radiology procedures</h2>
         <a href="static/SIR antibiotic guidelines.jpg">
           <img src="/static/SIR antibiotic guidelines.jpg" />
