--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <a href="/static/AJR anticoagulation recommendations 2.jpg">
           <img src="/static/AJR anticoagulation recommendations 2.jpg" />
           </a>
+        <h2>Splenic trauma grading</h2>
+        <a href="/static/Splenic injury grading combined.jpg" />
+        </a>
       </div>
       <div class="column right">
         <h2>SIR Antibiotic guidelines for Interventional Radiology procedures</h2>
