--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         </a>
         <h2>Splenic trauma grading</h2>
         <a href="/static/Splenic injury grading combined.jpg" />
+          <img src="/static/Splenic injury grading combined.jpg" />
         </a>
         <h2>Directory</h2>
         <a href="static/ARI phone directory.jpg">
