--- a/menu.html
+++ b/menu.html
@@ -1,3 +1,14 @@
-<HTML>
-<H1>Hello Hello</H1>
-</HTML>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="/static/styles.css" />
+    <title>Rad Guidelines</title>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
+    <script type="text/javascript" src="/static/main.js?1"></script>
+  </head>
+  <body>
+    <h1>Hello Hello</h1>
+  </body>
+</html>
