--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
           <a href="static/CTR.jpg">
            <img src="static/CTR.jpg" />
           </a>
+      <h2>Test Link</h2>
+          <a href="menu.html">
+            img src="static/MRI brain.jpg" />
+          </a>
       </div>
     </div>
     <div id="image-overlay"></div>
