--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </a>
       <h2>Test Link</h2>
           <a href="menu.html">
-            img src="static/MRI brain.jpg" />
+            <img src="static/MRI brain.jpg" />
           </a>
       </div>
     </div>
