--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>Hello Hello</h1>
-    <imgsrc="Diagnostic menu button.jpg">
-    <imgsrc="Interventional menu button.jpg">
+    <img src="/static/Diagnostic menu button.jpg" />
+    <img src="/static/Interventional menu button.jpg" />
   </body>
 </html>
