--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <h1>Hello Hello</h1>
+    <center>
     <img src="/static/Diagnostic menu button.jpg" height="400" />
     <img src="/static/Interventional menu button.jpg" height="400" />
+    </center>
   </body>
 </html>
