--- a/diagnostic.html
+++ b/diagnostic.html
@@ -1,1 +1,44 @@
-
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="/static/styles.css" />
+    <title>Rad Guidelines</title>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
+    <script type="text/javascript" src="/static/main.js?1"></script>
+  </head>
+  <body>
+    <div id="container">
+      <div class="column left">
+       <h2>TI-RADS Thyroid nodule classification and recommendations</h2>
+        <a href="/static/ACR T-rads.jpg">
+          <img src="/static/ACR T-rads.jpg" />
+        </a>
+        <h2>New 2017 Fleishner guidelines for incidentally discovered pulmonary nodules</h2>
+        <a href="/static/2017 Fleishner guidelines.jpg">
+          <img src="/static/2017 Fleishner guidelines.jpg" />
+        </a>
+      </div>
+      <div class="column right">
+        <h2>SIR Antibiotic guidelines for Interventional Radiology procedures</h2>
+          <a href="static/SIR antibiotic guidelines.jpg">
+            <img src="/static/SIR antibiotic guidelines.jpg" />
+          </a>
+        <h2>LUNG-RADS screening guidelines</h2>
+        <a href="/static/Lung-RADS.jpg">
+          <img src="/static/Lung-RADS.jpg" />
+        </a>
+        <h2>Directory</h2>
+        <a href="static/ARI phone directory.jpg">
+          <img src="static/ARI phone directory.jpg" />
+        </a>
+        <h2>Critical Test Results</h2>
+          <a href="static/CTR.jpg">
+           <img src="static/CTR.jpg" />
+          </a>
+      </div>
+    </div>
+    <div id="image-overlay"></div>
+  </body>
+</html>
