--- a/interventional.html
+++ b/interventional.html
@@ -1,1 +1,45 @@
-
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="/static/styles.css" />
+    <title>Rad Guidelines</title>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
+    <script type="text/javascript" src="/static/main.js?1"></script>
+  </head>
+  <body>
+    <div id="container">
+      <div class="column left">
+        <h1>Radiology imaging guidelines</h1>
+        <h2>SIR anticoagulation guidelines for interventional procedures</h2>
+        <a href="/static/SIR anticoagulation guidelines.jpg">
+          <img src="/static/SIR anticoagulation guidelines.jpg" />
+        </a>
+        <h2>AJR Guidelines Anticoagulation drugs for IR procedures</h2>
+        <a href="/static/AJR guidelines for anticoagulation drugs.jpg">
+          <img src="/static/AJR guidelines for anticoagulation drugs.jpg" />
+        </a>
+        <h2>SIR anticoagulation guidelines for interventional procedures 2</h2>
+        <a href="/static/AJR anticoagulation recommendations 2.jpg">
+          <img src="/static/AJR anticoagulation recommendations 2.jpg" />
+          </a>
+      </div>
+      <div class="column right">
+        <h2>SIR Antibiotic guidelines for Interventional Radiology procedures</h2>
+          <a href="static/SIR antibiotic guidelines.jpg">
+            <img src="/static/SIR antibiotic guidelines.jpg" />
+          </a>
+        <h2>Splenic trauma grading</h2>
+        <a href="/static/Splenic injury grading combined.jpg" />
+          <img src="/static/Splenic injury grading combined.jpg" />
+        </a>
+        <h2>Directory</h2>
+        <a href="static/ARI phone directory.jpg">
+          <img src="static/ARI phone directory.jpg" />
+        </a>
+      </div>
+    </div>
+    <div id="image-overlay"></div>
+  </body>
+</html>
