--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -9,57 +10,9 @@
     <script type="text/javascript" src="/static/main.js?1"></script>
   </head>
   <body>
-    <div id="container">
-      <div class="column left">
-        <h1>Radiology imaging guidelines</h1>
-        <h2>SIR anticoagulation guidelines for interventional procedures</h2>
-        <a href="/static/SIR anticoagulation guidelines.jpg">
-          <img src="/static/SIR anticoagulation guidelines.jpg" />
-        </a>
-        <h2>AJR Guidelines Anticoagulation drugs for IR procedures</h2>
-        <a href="/static/AJR guidelines for anticoagulation drugs.jpg">
-          <img src="/static/AJR guidelines for anticoagulation drugs.jpg" />
-        </a>
-        <h2>SIR anticoagulation guidelines for interventional procedures 2</h2>
-        <a href="/static/AJR anticoagulation recommendations 2.jpg">
-          <img src="/static/AJR anticoagulation recommendations 2.jpg" />
-          </a>
-      </div>
-      <div class="column right">
-        <h2>SIR Antibiotic guidelines for Interventional Radiology procedures</h2>
-          <a href="static/SIR antibiotic guidelines.jpg">
-            <img src="/static/SIR antibiotic guidelines.jpg" />
-          </a>
-        <h2>TI-RADS Thyroid nodule classification and recommendations</h2>
-        <a href="/static/ACR T-rads.jpg">
-          <img src="/static/ACR T-rads.jpg" />
-        </a>
-        <h2>New 2017 Fleishner guidelines for incidentally discovered pulmonary nodules</h2>
-        <a href="/static/2017 Fleishner guidelines.jpg">
-          <img src="/static/2017 Fleishner guidelines.jpg" />
-        </a>
-        <h2>LUNG-RADS screening guidelines</h2>
-        <a href="/static/Lung-RADS.jpg">
-          <img src="/static/Lung-RADS.jpg" />
-        </a>
-        <h2>Splenic trauma grading</h2>
-        <a href="/static/Splenic injury grading combined.jpg" />
-          <img src="/static/Splenic injury grading combined.jpg" />
-        </a>
-        <h2>Directory</h2>
-        <a href="static/ARI phone directory.jpg">
-          <img src="static/ARI phone directory.jpg" />
-        </a>
-        <h2>Critical Test Results</h2>
-          <a href="static/CTR.jpg">
-           <img src="static/CTR.jpg" />
-          </a>
-      <h2>Test Link</h2>
-          <a href="menu.html">
-            <img src="static/MRI brain.jpg" />
-          </a>
-      </div>
-    </div>
-    <div id="image-overlay"></div>
+    <center>
+    <img src="/static/Diagnostic menu button.jpg" height="400" />
+    <img src="/static/Interventional menu button.jpg" height="400" />
+    </center>
   </body>
 </html>
