--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
   </head>
   <body>
     <center>
-    <img src="/static/Diagnostic menu button.jpg" height="400" />
-    <img src="/static/Interventional menu button.jpg" height="400" />
+              <a href="/static/2017 Fleishner guidelines.jpg">
+          <img src="/static/2017 Fleishner guidelines.jpg" />
+        </a>
+    <a href="diagnostic.html">
+      <img src="/static/Diagnostic menu button.jpg" height="400" />
+    </a>
+    <a href="interventional.html">
+      <img src="/static/Interventional menu button.jpg" height="400" />
+    </a>
     </center>
   </body>
 </html>
