--- a/interventional.html
+++ b/interventional.html
@@ -20,7 +20,7 @@
         <a href="/static/AJR guidelines for anticoagulation drugs.jpg">
           <img src="/static/AJR guidelines for anticoagulation drugs.jpg" />
         </a>
-        <h2>SIR anticoagulation guidelines for interventional procedures 2</h2>
+        <h2>AJR anticoagulation guidelines for interventional procedures 2</h2>
         <a href="/static/AJR anticoagulation recommendations 2.jpg">
           <img src="/static/AJR anticoagulation recommendations 2.jpg" />
           </a>
@@ -33,10 +33,6 @@
         <h2>Splenic trauma grading</h2>
           <a href="/static/Splenic injury grading combined.jpg" />
             <img src="/static/Splenic injury grading combined.jpg" />
-          </a>
-        <h2>SIR Antibiotic guidelines for Interventional Radiology procedures</h2>
-          <a href="static/SIR antibiotic guidelines.jpg">
-            <img src="/static/SIR antibiotic guidelines.jpg" />
           </a>
         <h2>Directory</h2>
         <a href="static/ARI phone directory.jpg">
