--- a/diagnostic.html
+++ b/diagnostic.html
@@ -19,6 +19,10 @@
         <a href="/static/2017 Fleishner guidelines.jpg">
           <img src="/static/2017 Fleishner guidelines.jpg" />
         </a>
+        <h2>Summa Contrast Hydration Protocols</h2>
+        <a href="/static/contrast hydration guidelines.jpg">
+          <img src"/static/contrast hydration guidelines.jpg" />
+        </a>
       </div>
       <div class="column right">
         <h2>LUNG-RADS screening guidelines</h2>
