--- a/interventional.html
+++ b/interventional.html
@@ -30,9 +30,17 @@
           <a href="static/SIR antibiotic guidelines.jpg">
             <img src="/static/SIR antibiotic guidelines.jpg" />
           </a>
-        <h2>Splenic trauma grading</h2>
+        <h2>AAST Splenic trauma grading</h2>
           <a href="/static/Splenic injury grading combined.jpg" />
             <img src="/static/Splenic injury grading combined.jpg" />
+          </a>
+        <h2>AAST Liver trauma grading</h2>
+          <a href="/static/Liver injury grading AAST.jpg">
+            <img src="/static/Liver injury grading AAST.jpg" />
+          </a>
+        <h2>AAST Kidney trauma grading</h2>
+          <a href="static/Kidney injury grading AAST/jpg">
+            <img src="static/Kidney injury grading AAST.jpg" />
           </a>
         <h2>Directory</h2>
         <a href="static/ARI phone directory.jpg">
