--- a/diagnostic.html
+++ b/diagnostic.html
@@ -20,8 +20,8 @@
           <img src="/static/2017 Fleishner guidelines.jpg" />
         </a>
         <h2>Summa Contrast Hydration Protocols</h2>
-        <a href="/static/contrast hydration guidelines.JPG">
-          <img src"/static/contrast hydration guidelines.JPG" />
+        <a href="/static/contrast hydration guidelines new.jpg">
+          <img src"/static/contrast hydration guidelines new.jpg" />
         </a>
       </div>
       <div class="column right">
