--- a/diagnostic.html
+++ b/diagnostic.html
@@ -21,7 +21,7 @@
         </a>
         <h2>Summa Contrast Hydration Protocols</h2>
         <a href="/static/contrast hydration guidelines new.jpg">
-          <img src"/static/contrast hydration guidelines new.jpg" />
+          <img src="/static/contrast hydration guidelines new.jpg" />
         </a>
       </div>
       <div class="column right">
