--- a/diagnostic.html
+++ b/diagnostic.html
@@ -29,9 +29,13 @@
         <a href="/static/Lung-RADS.jpg">
           <img src="/static/Lung-RADS.jpg" />
         </a>
+        <h2>Non-small cell Lung Cancer Staging</h2>
+        <a href="/static/non small cell lung cancer staging.jpg">
+          <img src="static/non small cell lung cancer staging.jpg" />
+        </a>
         <h2>Directory</h2>
-        <a href="static/ARI phone directory.jpg">
-          <img src="static/ARI phone directory.jpg" />
+        <a href="static/telephone directory.jpg">
+          <img src="static/telephone directory.jpg" />
         </a>
         <h2>Critical Test Results</h2>
           <a href="static/CTR.jpg">
