--- a/diagnostic.html
+++ b/diagnostic.html
@@ -23,6 +23,10 @@
         <a href="/static/contrast hydration guidelines new.jpg">
           <img src="/static/contrast hydration guidelines new.jpg" />
         </a>
+        <h2>Contrast reaction protocol</h2>
+        <a href="/static/contrast reaction protocol.jpg">
+          <img src="static/contrast reaction protocol.jpg" />
+        </a>
         <h2>Critical Test Results</h2>
           <a href="static/CTR.jpg">
            <img src="static/CTR.jpg" />
