--- a/diagnostic.html
+++ b/diagnostic.html
@@ -27,6 +27,10 @@
         <a href="/static/contrast reaction protocol.jpg">
           <img src="static/contrast reaction protocol.jpg" />
         </a>
+        <h2>ASPECT scoring</h2>
+        <a href="static/ASPECTS scoring.jpg">
+           <img src="static/ASPECTS scoring.jpg" />
+        </a>
         <h2>Critical Test Results</h2>
           <a href="static/CTR.jpg">
            <img src="static/CTR.jpg" />
