--- a/interventional.html
+++ b/interventional.html
@@ -42,6 +42,10 @@
           <a href="static/Kidney injury grading AAST/jpg">
             <img src="static/Kidney injury grading AAST.jpg" />
           </a>
+        <h2>ASPECTS scoring</h2>  
+          <a href="static/ASPECTS scoring.jpg">
+            <img src="static/ASPECTS scoring.jpg" />
+          </a>
         <h2>Directory</h2>
         <a href="static/ARI phone directory.jpg">
           <img src="static/ARI phone directory.jpg" />
