--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="/static/main.js?1"></script>
   </head>
   <body>
+    <img src="/static/ARI title logo.png" />
     <center>
     <a href="diagnostic.html">
       <img src="/static/Diagnostic menu button.jpg" height="400" />
