Remove box shadow from logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="/static/main.js?1"></script>
   </head>
   <body>
-    <img src="/static/ARI title logo.jpg" border ="0"/>
+    <img src="/static/ARI title logo.jpg" style="box-shadow: none;" border ="0"/>
     <center>
     <a href="diagnostic.html">
       <img src="/static/Diagnostic menu button.jpg" height="400" />
