--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <a href="interventional.html">
       <img src="/static/Interventional menu button.jpg" height="400" />
     </a>
+    <p>Questions? Comments? Stuff doesn't work? Contact Rob Sheu.
     </center>
   </body>
 </html>
