--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   </head>
   <body>
     <img src="/static/ARI title logo.jpg" style="box-shadow: none;" />
-    <img src="/static/directory icon complete.png" style="box-shadow: none;" align="right" height="125" />
+    <a href="/static/ARI telephone directory.pdf">
+      <img src="/static/directory icon complete.png" style="box-shadow: none;" align="right" height="125" />
+    </a>
     <center>
     <a href="diagnostic.html">
       <img src="/static/Diagnostic menu button.jpg" height="400" />
