--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <img src="/static/ARI title logo.jpg" style="box-shadow: none;" />
-    <a href="/static/ARI telephone directory.jpg">
+    <a href="/static/ARI phone directory.jpg">
       <img src="/static/directory icon complete.png" style="box-shadow: none;" align="right" height="125" />
     </a>
     <center>
