--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <p><p>
     <center>
     <a href="diagnostic.html">
-      <img src="/static/Diagnostic menu header 2.jpg" height="400" />
+      <img src="/static/Diagnostic menu header 2.png" height="400" />
     </a>
     <tab>
     <a href="interventional.html">
-      <img src="/static/Interventional menu header.jpg" height="400" />
+      <img src="/static/Interventional menu header.png" height="400" />
     </a>
     <p>Questions? Comments? Stuff doesn't work? Contact Rob Sheu.
     </center>
