--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p><p>
     <center>
     <a href="diagnostic.html">
-      <img src="/static/Diagnostic menu header 2.png" height="150" style="box-shadow: none;" />
+      <img src="/static/diagnostic menu header 2.png" height="150" style="box-shadow: none;" />
     </a>
     <tab>
     <a href="interventional.html">
