--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </a>
     <tab>
     <a href="interventional.html">
-      <img src="/static/Interventional menu header.png" height="150" style="box-shadow: none;" />
+      <img src="/static/Interventional menu header2.png" height="150" style="box-shadow: none;" />
     </a>
     <p>Questions? Comments? Stuff doesn't work? Contact Rob Sheu.
     </center>
