--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
       <img src="/static/directory icon complete.png" style="box-shadow: none;" align="right" height="125" />
     </a>
     <br><br>
-    <center>
-    <a href="diagnostic.html">
-      <img src="/static/diagnostic menu header 2.png" height="150" style="box-shadow: none;" />
-    </a>
-    <a href="interventional.html">
-      <img src="/static/Interventional menu header.png" height="150" style="box-shadow: none;" />
-    </a>
+    <div id="container">
+      <div class="column left">
+        <a href="diagnostic.html">
+          <img src="/static/diagnostic menu header 2.png" height="150" style="box-shadow: none;" />
+        </a>
+      </div>
+      <div class="column right">
+        <a href="interventional.html">
+          <img src="/static/Interventional menu header.png" height="150" style="box-shadow: none;" />
+        </a>
+      </div>
     <p>Questions? Comments? Stuff doesn't work? Contact Rob Sheu.
-    </center>
   </body>
 </html>
