--- a/index.html
+++ b/index.html
@@ -20,6 +20,25 @@
         <a href="diagnostic.html">
           <img src="/static/diagnostic menu header 2.png" height="150" style="box-shadow: none;" />
         </a>
+        <a href="/static/ACR T-rads.jpg">
+          TI-RADS Thyroid nodule classification and recommendations
+        </a>
+        <h2>New 2017 Fleishner guidelines for incidentally discovered pulmonary nodules</h2>
+        <a href="/static/2017 Fleishner guidelines.jpg">
+          <img src="/static/2017 Fleishner guidelines.jpg" />
+        </a>
+        <h2>Summa Contrast Hydration Protocols</h2>
+        <a href="/static/contrast hydration guidelines new.jpg">
+          <img src="/static/contrast hydration guidelines new.jpg" />
+        </a>
+        <h2>Contrast reaction protocol</h2>
+        <a href="/static/contrast reaction protocol.jpg">
+          <img src="static/contrast reaction protocol.jpg" />
+        </a>
+        <h2>ASPECT scoring</h2>
+        <a href="static/ASPECTS scoring.jpg">
+           <img src="static/ASPECTS scoring.jpg" />
+        </a>
       </div>
       <div class="column right">
         <a href="interventional.html">
