--- a/index.html
+++ b/index.html
@@ -20,16 +20,17 @@
         <a href="diagnostic.html">
           <img src="/static/diagnostic menu header 2.png" height="150" style="box-shadow: none;" />
         </a>
+        <br>
         <a href="/static/ACR T-rads.jpg">
           TI-RADS Thyroid nodule classification and recommendations
         </a>
-        <h2>New 2017 Fleishner guidelines for incidentally discovered pulmonary nodules</h2>
+        <br>
         <a href="/static/2017 Fleishner guidelines.jpg">
-          <img src="/static/2017 Fleishner guidelines.jpg" />
+          2017 Fleishner guidelines for incidentally discovered pulmonary nodules
         </a>
-        <h2>Summa Contrast Hydration Protocols</h2>
+        <br>
         <a href="/static/contrast hydration guidelines new.jpg">
-          <img src="/static/contrast hydration guidelines new.jpg" />
+          Summa Contrast Hydration Protocols
         </a>
         <h2>Contrast reaction protocol</h2>
         <a href="/static/contrast reaction protocol.jpg">
