--- a/index.html
+++ b/index.html
@@ -34,13 +34,11 @@
         <a href="/static/contrast hydration guidelines new.jpg">
           Summa Contrast Hydration Protocols
         </a>
-        <h2>Contrast reaction protocol</h2>
         <a href="/static/contrast reaction protocol.jpg">
-          <img src="static/contrast reaction protocol.jpg" />
+          Summa Contrast reaction protocol
         </a>
-        <h2>ASPECT scoring</h2>
         <a href="static/ASPECTS scoring.jpg">
-           <img src="static/ASPECTS scoring.jpg" />
+           ASPECT stroke scoring
         </a>
       </div>
       <div class="column right">
