--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <a href="/static/telephone directory.jpg">
       <img src="/static/directory icon complete.png" style="box-shadow: none;" align="right" height="125" />
     </a>
-    <br><br>
     <div id="container">
       <div class="column left">
         <p>
@@ -52,6 +51,7 @@
           <img src="/static/Interventional menu header.png" height="150" style="box-shadow: none;" />
         </a>
       </div>
+    </div>
     <p>Questions? Comments? Stuff doesn't work? Contact Rob Sheu.
   </body>
 </html>
