--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="container">
               <div class="column left">
           <a href="diagnostic.html">
-            <img src="/static/diagnostic menu header 2.png" style="box-shadow: none; max-height:150px; height:auto;" />
+            <img src="/static/diagnostic menu header 2.png" style="box-shadow: none; max-height:150px; width:auto;" />
           </a>
         <p>
         <a href="/static/ACR T-rads.jpg">
