--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <script type="text/javascript" src="/static/main.js?1"></script>
   </head>
   <body>
+    <p>
     <img src="/static/ARI title logo.jpg" style="box-shadow: none;" />
     <a href="/static/telephone directory.jpg">
       <img src="/static/directory icon complete.png" style="box-shadow: none;" align="right" height="125" />
     </a>
+    </p>
     <div id="container">
               <div class="column left">
           <a href="diagnostic.html">
@@ -47,7 +49,7 @@
       </div>
       <div class="column right">
         <a href="interventional.html">
-          <img src="/static/Interventional menu header.png" height="150" style="box-shadow: none;" />
+          <img src="/static/Interventional menu header.png" height="150" style="box-shadow: none; max-height:150px; width:auto; height:auto" />
         </a>
       </div>
     </div>
