--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
            ASPECT stroke scoring
         </a>
         </p>
+        <p>
+        <a href="/static/Lung-RADS.jpg">
+          LUNG-RADS screening guidelines
+        </a>
+        </p>
+        <p>
+        <a href="/static/non small cell lung cancer staging.jpg">
+          Non-small cell Lung Cancer Staging
+        </a>
+        </p>
       </div>
       <div class="column right">
         <a href="interventional.html">
