--- a/index.html
+++ b/index.html
@@ -61,6 +61,41 @@
         <a href="interventional.html">
           <img src="/static/Interventional menu header.png" height="150" style="box-shadow: none; max-height:150px; width:auto; height:auto" />
         </a>
+        <p>
+        <a href="/static/SIR anticoagulation guidelines.jpg">
+          SIR anticoagulation guidelines for interventional procedures
+        </a>
+        </p>
+        <p>
+        <a href="/static/AJR guidelines for anticoagulation drugs.jpg">
+          AJR Guidelines Anticoagulation drugs for IR procedures
+        </a>
+        </p>
+        <p>
+        <a href="/static/AJR anticoagulation recommendations 2.jpg">
+          AJR anticoagulation guidelines for interventional procedures 2
+        </a>
+        </p>
+        <p>
+        <a href="static/SIR antibiotic guidelines.jpg">
+           SIR Antibiotic guidelines for Interventional Radiology procedures
+        </a>
+        </p>
+        <p>
+          <a href="/static/Splenic injury grading combined.jpg" />
+            AAST Splenic trauma grading
+          </a>
+        </p>
+        <p>
+          <a href="/static/Liver injury grading AAST.jpg">
+            AAST Liver trauma grading
+          </a>
+        </p>
+        <p>
+          <a href="static/Kidney injury grading AAST/jpg">
+            AAST Kidney trauma grading
+          </a>
+        </p>
       </div>
     </div>
     <p>Questions? Comments? Stuff doesn't work? Contact Rob Sheu.
