--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </a>
         </p>
         <p>
-          <a href="static/Kidney injury grading AAST/jpg">
+          <a href="static/Kidney injury grading AAST.jpg">
             AAST Kidney trauma grading
           </a>
         </p>
