--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </a>
         </p>
       </div>
-      <div class="column right">
+      <div class="column center">
         <a href="interventional.html">
           <img src="/static/Interventional menu header.png" height="150" style="box-shadow: none; max-height:150px; width:auto; height:auto" />
         </a>
@@ -96,6 +96,9 @@
             AAST Kidney trauma grading
           </a>
         </p>
+      </div>
+      <div class="column right">
+        Updates:
       </div>
     </div>
     <p>Questions? Comments? Stuff doesn't work? Contact Rob Sheu.
