--- a/index.html
+++ b/index.html
@@ -98,7 +98,12 @@
         </p>
       </div>
       <div class="column right">
-        Updates:
+        <h1>Helpful Links:</h1>
+          <p>
+            <a href="https://careone.westernreservehospital.org/vpn/index.html" />
+              CareOne signoff for orders at WRH
+            </a>
+          </p>
       </div>
     </div>
     <p>Questions? Comments? Stuff doesn't work? Contact Rob Sheu.
