--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>
     <img src="/static/ARI title logo.jpg" style="box-shadow: none;" />
     <a href="/static/telephone directory.jpg">
-      <img src="/static/directory icon complete.png" style="box-shadow: none;" align="right" height="125" />
+      <img src="/static/directory icon complete.png" style="box-shadow: none; max-height:125px; width:auto;" align="right" />
     </a>
     </p>
     <div id="container">
@@ -106,6 +106,8 @@
           </p>
       </div>
     </div>
-    <p>Questions? Comments? Stuff doesn't work? Contact Rob Sheu.
+    <center>
+      <p>Questions? Comments? Stuff doesn't work? Contact Rob Sheu.
+    </center>
   </body>
 </html>
