--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <p>
     <img src="/static/ARI title logo.jpg" style="box-shadow: none;" />
-    <a href="/static/telephone directory.jpg">
+    <a href="/static/phone directory new.jpg">
       <img src="/static/directory icon complete.png" style="box-shadow: none; max-height:125px; width:auto;" align="right" />
     </a>
     </p>
