--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
               CareOne signoff for orders at WRH
             </a>
           </p>
+        <h1>Updates and notifications</h1>
+          <p>
+            <a href="Flap CTA.html" />
+              Dr. Unger update on CTA Abdominal Wall for Flaps (DIEP)
+            </a>
+          </p>
       </div>
     </div>
     <center>
