Use heading in top div

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <script type="text/javascript" src="/static/main.js?1"></script>
   </head>
   <body>
-    <p>
-    <img src="/static/ARI title logo.jpg" style="box-shadow: none;" />
-    <a href="/static/phone directory new.jpg">
-      <img src="/static/directory icon complete.png" style="box-shadow: none; max-height:125px; width:auto;" align="right" />
-    </a>
-    </p>
+    <div id="heading>
+      <img src="/static/ARI title logo.jpg" style="box-shadow: none;" />
+      <a href="/static/phone directory new.jpg">
+        <img src="/static/directory icon complete.png" style="box-shadow: none; max-height:125px; width:auto;" align="right" />
+      </a>
+    </div>
     <div id="container">
               <div class="column left">
           <a href="diagnostic.html">
