--- a/test.html
+++ b/test.html
@@ -2,5 +2,6 @@
 <html lang="en">
 <body>
 Test test test
+<embed src="/static/TIPS ultrasound.pdf" width="1000" type='application/pdf'>
 </body>
 </html>
