--- a/index.html
+++ b/index.html
@@ -92,8 +92,13 @@
           </a>
         </p>
         <p>
-          <a href="static/Kidney injury grading AAST.jpg">
+          <a href="static/Kidney injury grading AAST.jpg" />
             AAST Kidney trauma grading
+          </a>
+        </p>
+        <p>
+          <a href="static/TIPS ultrasound.jpg" />
+            TIPS Ultrasound
           </a>
         </p>
       </div>
