--- a/test.html
+++ b/test.html
@@ -3,5 +3,10 @@
 <body>
 Test test test
 <embed src="/static/TIPS ultrasound.pdf" width="1000" height="1200" type='application/pdf'>
+<p>
+  <a href="/static/TIPS ultrasound.pdf" />
+    TIPS Ultrasound
+  </a>
+</p>
 </body>
 </html>
