--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <a href="/static/ACR T-rads.jpg">
           TI-RADS Thyroid nodule classification and recommendations
         </a>
+        <a href="/static/TI-RADS ACR paper.pdf" />
+          [complete pdf]
+        </a>
         </p>
         <p>
         <a href="/static/2017 Fleishner guidelines.jpg">
@@ -119,9 +122,6 @@
     </div>
     <center>
       <p>Questions? Comments? Stuff doesn't work? Contact Rob Sheu.</p>
-        <a href="test.html" />
-          test
-        </a>
     </center>
   </body>
 </html>
