--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
         <a href="static/ASPECTS scoring.jpg">
            ASPECT stroke scoring
         </a>
+        <a href="static/ASPECT scoring AJNR.pdf" />
+          [complete pdf]
+        </a>
         </p>
         <p>
         <a href="/static/Lung-RADS.jpg">
@@ -111,6 +114,8 @@
             <a href="https://careone.westernreservehospital.org/vpn/index.html" />
               CareOne signoff for orders at WRH
             </a>
+            If you are signing off orders off site then you will not be able to use your ID badge. At the step where you normally flash
+            your badge click on the "help me log in" link. After you answer your two authentication questions, you will be allowed to sign off 
           </p>
         <h1>Updates and notifications</h1>
           <p>
