--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
           Non-small cell Lung Cancer Staging
         </a>
         </p>
+        <p>
+          <a href="/static/Incidental pancreatic cystic mass.jpg" />ACR Incidental Pancreatic Cystic Mass</a>
+          <a href="/static/ACR Incidental Pancreatic cysts.pdf" />[complete pdf]</a>
       </div>
       <div class="column center">
         <a href="interventional.html">
