--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           TI-RADS Thyroid nodule classification and recommendations
         </a>
         <a href="/static/TI-RADS ACR paper.pdf" />
-          [complete pdf]
+          [complete pdf here]
         </a>
         </p>
         <p>
@@ -49,7 +49,7 @@
            ASPECT stroke scoring
         </a>
         <a href="static/ASPECT scoring AJNR.pdf" />
-          [complete pdf]
+          [complete pdf here]
         </a>
         </p>
         <p>
@@ -64,7 +64,18 @@
         </p>
         <p>
           <a href="/static/Incidental pancreatic cystic mass.jpg" />ACR Incidental Pancreatic Cystic Mass</a>
-          <a href="/static/ACR Incidental Pancreatic cysts.pdf" />[complete pdf]</a>
+          <a href="/static/ACR Incidental Pancreatic cysts.pdf" />[complete pdf here]</a>
+        </p>
+        <p>
+          <a href="/static/ACR Incidental Cystic Renal Mass.jpg" />ACR Incidental Cystic Renal Mass</a>
+          <a href="/static/ACR Incidental Renal Mass on CT.pdf" />[complete pdf here]</a>
+        </p>
+        <p>
+          <a href="/static/ACR Incidental Solid Renal Mass.jpg" />ACR Incidental Solid Renal Mass</a>
+        </p>
+        <p>
+          <a href="/static/ACR Incidental Adrenal Mass.jpg" />ACR Incidental Adrenal Mass</a>
+          <a href="/static/ACR incidental Adrenal Mass.pdf" />[complete pdf here]</a>
       </div>
       <div class="column center">
         <a href="interventional.html">
