--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <a href="/static/ACR Incidental Solid Renal Mass.jpg" />ACR Incidental Solid Renal Mass</a>
         </p>
         <p>
-          <a href="/static/ACR Incidental Adrenal Mass.jpg" />ACR Incidental Adrenal Mass</a>
+          <a href="/static/ACR incidental Adrenal Mass.jpg" />ACR Incidental Adrenal Mass</a>
           <a href="/static/ACR incidental Adrenal Mass.pdf" />[complete pdf here]</a>
         </p>
       </div>
