--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </p>
         <p>
           <a href="/static/ACR incidental Adrenal Mass.jpg" />ACR Incidental Adrenal Mass</a>
-          <a href="/static/ACR Incidental Adrenal Mass.pdf" />[complete pdf here]</a>
+          <a href="/static/ACR Incidental Adrenal mass.pdf" />[complete pdf here]</a>
         </p>
       </div>
       <div class="column center">
