--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
           <a href="/static/ACR Incidental Solid Renal Mass.jpg" />ACR Incidental Solid Renal Mass</a>
         </p>
         <p>
-          <a href="/static/ACR incidental Adrenal Mass.jpg" />ACR Incidental Adrenal Mass</a>
-          <a href="/static/ACR Incidental Adrenal mass.pdf" />[complete pdf here]</a>
+          <a href="/static/ACR incidental Adrenal mass.jpg" />ACR Incidental Adrenal Mass</a>
+          <a href="/static/ACR Incidental Adrenal Mass.pdf" />[complete pdf here]</a>
         </p>
       </div>
       <div class="column center">
