--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </p>
         <p>
           <a href="/static/AJR guidelines for anticoagulation drugs.jpg" />AJR Guidelines Anticoagulation drugs for IR procedures</a>
-          <a href="/static/managment of anti-platlet before IR procedure - AJR.pdf" />[complete pdf here</a>
+          <a href="/static/managment of anti-platlet agents before IR procedure - AJR.pdf" />[complete pdf here]</a>
         </p>
         <p>
         <a href="/static/AJR anticoagulation recommendations 2.jpg">
