--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
           <a href="/static/ACR incidental Adrenal mass.jpg" />ACR Incidental Adrenal Mass</a>
           <a href="/static/ACR Incidental Adrenal Mass.pdf" />[complete pdf here]</a>
         </p>
+        <p>
+          <a href="/static/Incidental Adnexal Cystic Mass.jpg" />ACR Incidental Adnexal Cystic Mass</a>
+          <a href="/static/ACR Incidental Adnexal Cystic Mass.pdf" />[complete pdf here]</a>
+        </p>
       </div>
       <div class="column center">
         <a href="interventional.html">
