--- a/index.html
+++ b/index.html
@@ -135,6 +135,12 @@
             If you are signing orders off site then you will not be able to use your ID badge. At the step where you normally flash
             your badge click on the "help me log in" link. After you answer your two authentication questions, you will be allowed to sign off 
           </p>
+          <p>
+            <a href="static/Protocols CT ARI 2018.pdf" />CT Protocols</a>
+          </p>
+          <p>
+            <a href="static/Protocols MRI ARI 2018.pdf" />MRI Protocols</a>
+          </p>
         <h1>Updates and notifications</h1>
           <p>
             <a href="Flap CTA.html" />
