--- a/index.html
+++ b/index.html
@@ -141,6 +141,12 @@
           <p>
             <a href="static/Protocols MRI ARI 2018.pdf" />MRI Protocols</a>
           </p>
+          <p>
+            <a href="static/Protocols Radiography ARI 2018.pdf" />Radiography Protcol</a>
+          </p>
+          <p>
+            <a href="static/Protocols Ultrasound ARI 2018.pdf" />Ultrasound Protocols</a>
+          </p>
         <h1>Updates and notifications</h1>
           <p>
             <a href="Flap CTA.html" />
