--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
             TIPS Ultrasound
           </a>
         </p>
+        <p>
+          <a href="static/arthrogram approaches.pdf" />Neil's paper on arthrogram technique</a>
+        </p>
       </div>
       <div class="column right">
         <h1>Helpful Links:</h1>
