--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
         <p>
           <a href="static/arthrogram approaches.pdf" />Neil's paper on arthrogram technique</a>
         </p>
+        <p>
+          <a href="stroke.html" />Stroke Reference Papers</a>
+        </p>
       </div>
       <div class="column right">
         <h1>Helpful Links:</h1>
