--- a/stroke.html
+++ b/stroke.html
@@ -11,13 +11,13 @@
   <body>
   <h1>Stroke reference papers</h1>
   <p>
-    <a href="/static/2018 Guidelines for Stroke Management.pdf" />AHA ASA 2018 Guidelines for the Early Management of Patients With Acute Ischemic Stroke</a>
+    <a href="static/2018 Guidelines for Stroke Management.pdf" />AHA ASA 2018 Guidelines for the Early Management of Patients With Acute Ischemic Stroke</a>
   </p>
   <p>
-    <a href="/static/nejmoa1706442.pdf" />NEJM Thrombectomy 6 to 24 Hours after Stroke with a Mismatch between Deficit and Infarct</a>
+    <a href="static/nejmoa1706442.pdf" />NEJM Thrombectomy 6 to 24 Hours after Stroke with a Mismatch between Deficit and Infarct</a>
   </p>
   <p>
-    <a href="/static/nejmoa1713973.pdf" />NEJM Thrombectomy for Stroke at 6 to 16 Hours with Selection by Perfusion Imaging</a>
+    <a href="static/nejmoa1713973.pdf" />NEJM Thrombectomy for Stroke at 6 to 16 Hours with Selection by Perfusion Imaging</a>
   </p>
   </body>
 </html>
