--- a/stroke.html
+++ b/stroke.html
@@ -11,7 +11,7 @@
   <body>
   <h1>Stroke reference papers</h1>
   <p>
-    <a href="static/2018 Guidelines for Stroke Management.pdf" />AHA ASA 2018 Guidelines for the Early Management of Patients With Acute Ischemic Stroke</a>
+    <a href="static/2018 Guidelines for Stroke management.pdf" />AHA ASA 2018 Guidelines for the Early Management of Patients With Acute Ischemic Stroke</a>
   </p>
   <p>
     <a href="static/nejmoa1706442.pdf" />NEJM Thrombectomy 6 to 24 Hours after Stroke with a Mismatch between Deficit and Infarct</a>
