--- a/stroke.html
+++ b/stroke.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
     <script type="text/javascript" src="/static/main.js?1"></script>
   </head>
-  <body bgcolor="#000000" text="#ffffff" link=#ffff99">
+  <body bgcolor="#000000" text="#ffffff" link="#ffff99">
   <h1>Stroke reference papers</h1>
   <p>
     <a href="static/2018 Guidelines for Stroke management.pdf" />AHA ASA 2018 Guidelines for the Early Management of Patients With Acute Ischemic Stroke</a>
