--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
     <script type="text/javascript" src="/static/main.js?1"></script>
   </head>
-  <body>
+  <body bgcolor="#000000" text="#ffffff" link="#ffff99" vlink="#ffff99" alink="#ffff99">
     <div id="heading">
       <img src="/static/ARI title logo.jpg" style="box-shadow: none;" />
       <a href="/static/phone directory new.jpg">
