--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body bgcolor="#000000" text="#ffffff" link="#ffff99" vlink="#ffff99" alink="#ffff99">
     <div id="heading">
-      <img src="/static/ARI title logo.jpg" style="box-shadow: none;" />
+      <img src="/static/ARI title logo.jpg" style="box-shadow: none; max-height:200px; width=auto;" align="left" />
       <a href="/static/phone directory new.jpg">
         <img src="/static/directory icon complete.png" style="box-shadow: none; max-height:125px; width:auto;" align="right" />
       </a>
