--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <img src="/static/Interventional menu header.png" height="150" style="box-shadow: none; max-height:150px; width:auto; height:auto" />
         </a>
         <p>
-        <a href="/static/SIR anticoagulation guidelines.jpg">
+        <a href="/static/SIR Anticoagulation guidelines.jpg">
           SIR anticoagulation guidelines for interventional procedures
         </a>
         </p>
