--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
     <script type="text/javascript" src="/static/main.js?1"></script>
   </head>
-  <body bgcolor="#000000" text="#ffffff" link="#ffff99" vlink="#ffff99" alink="#ffff99">
+  <body bgcolor="#000000" text="#d3d3d3" link="#add8e6" vlink="#add8e6" alink="#add8e6">
     <div id="heading">
       <img src="/static/ARI title logo.png" style="box-shadow: none; max-height:100px; width:auto;" align="left" />
       <a href="/static/phone directory new.jpg">
